// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`terminal/prompts/spinner (isCI = false) > basic > renders cancel symbol if code = 1 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{36cyan}◒{39x}",
  "{CURSOR:x * 1}",
  "{ERASE:down}",
  "{31red}✕{39x}  STOP\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = false) > basic > renders error message if code > 1 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{36cyan}◒{39x}",
  "{CURSOR:x * 1}",
  "{ERASE:down}",
  "{31red}▲{39x}  STOP\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = false) > basic > renders frames at interval 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{36cyan}◒{39x}",
  "{CURSOR:x * 1}",
  "{ERASE:down}",
  "{36cyan}◐{39x}",
  "{CURSOR:x * 1}",
  "{ERASE:down}",
  "{36cyan}◓{39x}",
  "{CURSOR:x * 1}",
  "{ERASE:down}",
  "{36cyan}◑{39x}",
  "{CURSOR:x * 1}",
  "{ERASE:down}",
  "{32green}✔{39x}\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = false) > basic > renders messages (with multiple lines) 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{36cyan}◒{39x}  START",
  "{CURSOR:x * 1}",
  "{ERASE:down}",
  "{36cyan}◐{39x}  message 1",
  "{CURSOR:x * 1}",
  "{ERASE:down}",
  "{36cyan}◓{39x}  Long Text\\nLong Text\\nLong Text\\nLong Text\\nLong Text",
  "{CURSOR:prevLine * 4}",
  "{ERASE:down}",
  "{36cyan}◑{39x}  Long Text\\nLong Text\\nLong Text\\nLong Text\\nLong Text\\nLong Text\\nLong Text\\nLong Text\\nLong Text\\nLong Text",
  "{CURSOR:prevLine * 9}",
  "{ERASE:down}",
  "{36cyan}◒{39x}  message 2.",
  "{CURSOR:x * 1}",
  "{ERASE:down}",
  "{32green}✔{39x}  STOP\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = false) > basic > renders timer when indicator is "timer" 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{36cyan}◒{39x}  START [0s]",
  "{CURSOR:x * 1}",
  "{ERASE:down}",
  "{32green}✔{39x}  STOP [0s]\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = false) > can be aborted by signal 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{31red}✕{39x}  Canceled\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = false) > custom > custom delay 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{36cyan}◒{39x}",
  "{CURSOR:x * 1}",
  "{ERASE:down}",
  "{36cyan}◐{39x}",
  "{CURSOR:x * 1}",
  "{ERASE:down}",
  "{36cyan}◓{39x}",
  "{CURSOR:x * 1}",
  "{ERASE:down}",
  "{36cyan}◑{39x}",
  "{CURSOR:x * 1}",
  "{ERASE:down}",
  "{32green}✔{39x}\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = false) > custom > custom symbols and symbolColor 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{31red}🍎{39x}",
  "{CURSOR:x * 1}",
  "{ERASE:down}",
  "{31red}🍌{39x}",
  "{CURSOR:x * 1}",
  "{ERASE:down}",
  "{31red}🍇{39x}",
  "{CURSOR:x * 1}",
  "{ERASE:down}",
  "{31red}🍓{39x}",
  "{CURSOR:x * 1}",
  "{ERASE:down}",
  "{32green}✔{39x}\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = false) > process exit handling > uses custom cancelMessage when SIGINT 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{31red}✕{39x}  Wow! Canceled!\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = false) > process exit handling > uses custom errorMessage when exit code 2 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{31red}▲{39x}  Wow! Error!\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = true) > basic > renders cancel symbol if code = 1 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{36cyan}◒{39x}  ...",
  "\\n",
  "{31red}✕{39x}  STOP\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = true) > basic > renders error message if code > 1 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{36cyan}◒{39x}  ...",
  "\\n",
  "{31red}▲{39x}  STOP\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = true) > basic > renders frames at interval 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{36cyan}◒{39x}  ...",
  "\\n",
  "{32green}✔{39x}\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = true) > basic > renders messages (with multiple lines) 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{36cyan}◒{39x}  START...",
  "\\n",
  "{36cyan}◐{39x}  message 1...",
  "\\n",
  "{36cyan}◓{39x}  Long Text\\nLong Text\\nLong Text\\nLong Text\\nLong Text...",
  "\\n",
  "{36cyan}◑{39x}  Long Text\\nLong Text\\nLong Text\\nLong Text\\nLong Text\\nLong Text\\nLong Text\\nLong Text\\nLong Text\\nLong Text...",
  "\\n",
  "{36cyan}◒{39x}  message 2...",
  "\\n",
  "{32green}✔{39x}  STOP\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = true) > basic > renders timer when indicator is "timer" 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{36cyan}◒{39x}  START...",
  "\\n",
  "{32green}✔{39x}  STOP [0s]\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = true) > can be aborted by signal 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{31red}✕{39x}  Canceled\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = true) > custom > custom delay 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{36cyan}◒{39x}  ...",
  "\\n",
  "{32green}✔{39x}\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = true) > custom > custom symbols and symbolColor 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{31red}🍎{39x}  ...",
  "\\n",
  "{32green}✔{39x}\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = true) > process exit handling > uses custom cancelMessage when SIGINT 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{31red}✕{39x}  Wow! Canceled!\\n",
  "{CURSOR:show}",
]
`;

exports[`terminal/prompts/spinner (isCI = true) > process exit handling > uses custom errorMessage when exit code 2 1`] = `
[
  "{CURSOR:hide}",
  "{90brightBlack}┆{39x}\\n",
  "{31red}▲{39x}  Wow! Error!\\n",
  "{CURSOR:show}",
]
`;
